--- a/task1/landing N++/style.css
+++ b/task1/landing N++/style.css
@@ -9,9 +9,11 @@ body {
 li {
   list-style-type: none;
 }
-li a,
-.logo a {
+a {
   text-decoration: none;
+}
+a:hover {
+  color: #333333;
 }
 
 section {
@@ -19,6 +21,7 @@ section {
 }
 
 header {
+  margin: 10px 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -53,17 +56,17 @@ header ul li a {
   display: flex;
   justify-content: space-around;
   background-color: #1abc9c;
-  padding: 32px 0;
+  padding: 34px 0 24px 0;
+
 }
 
 .app-review_right-side,
 .app-review_left-side {
-	display: block;
+  display: block;
   width: 50%;
 }
 .app-review_left-side img {
-	max-width: 64%;
-	padding-top: 30px;
+  max-width: 95%;
 }
 
 .app-review_right-side {
@@ -74,7 +77,7 @@ header ul li a {
 .app-review_right-side h1 {
   max-width: 80%;
   text-align: justify;
-  padding-top: 10px;
+  padding-bottom: 30px;
 }
 .app-review_right-side h1 {
   font-size: 28px;
@@ -83,18 +86,28 @@ header ul li a {
   font-size: 20px;
 }
 
-.buy-now {
-  margin-top: 50px;
-  border: 2px solid #fff;
+.big_button {
+  margin-top: 40px;
+  border: 2px solid #ffffff;
   text-align: center;
   border-radius: 4px;
   padding: 10px 20px;
   width: 140px;
   cursor: pointer;
 }
+.big_button a {
+  color: #ffffff;
+}
+
+.big_button:hover {
+  background-color: #ffffff;
+}
+.big_button:hover > a {
+  color: #16a085;
+}
 
 .our-development {
-  margin: 40px 0;
+  margin: 20px 0;
   display: flex;
 }
 .dev {
@@ -102,6 +115,7 @@ header ul li a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 0 28px;
 }
 
 .registration-form {
@@ -111,11 +125,11 @@ header ul li a {
 
 .registration-form h2 {
   padding-top: 30px;
-  color: #fff;
+  color: #ffffff;
 }
 
 i {
-  color: #fff;
+  color: #ffffff;
 }
 .icon {
   padding: 16px 0;
@@ -151,4 +165,9 @@ textarea {
   border: 2px solid white;
   border-radius: 4px;
   cursor: pointer;
+  font-size: 15px;
+}
+.registration-form form input[type="submit"]:hover {
+  background-color: #ffffff;
+  color: #16a085;
 }
