--- a/task2/razminka/style.css
+++ b/task2/razminka/style.css
@@ -1,23 +1,22 @@
-
 /**
  * Part 1. Sum of numbers
  */
-.sum_of_numbers {
-    display: flex;
-    flex-direction: row;
+article{
+  display: flex;
+  flex-direction: column;
 }
 span {
-    display: inline-block;
-    width: 40px;
+  display: inline-block;
+  width: 40px;
 }
 .sum_of_numbers input {
-    width: 30px;
+  width: 30px;
 }
 .buttons_part_one {
-    margin-left: 100px;
+  margin-left: 100px;
 }
 .buttons_part_one button {
-    margin-bottom: 10px; 
+  margin-bottom: 10px;
 }
 
 /**
