--- a/task2/razminka/style.css
+++ b/task2/razminka/style.css
@@ -9,17 +9,13 @@
 
 /* Chess board 4.2 */
 #chess_board_div {
-  display: block;
-  line-height: 0;
-  width: 0;
-  height: 0;
+  display: flex;
+  flex-wrap: wrap;
 }
 .chess_block {
-  display: inline-block;
-  padding: 10px;
-  /* margin-bottom: -4px; */
-  width: auto;
-  height: auto; 
+  padding: 11px;
+  width: 0;
+  height: 0; 
 }
 .black {
   background-color: black;
