--- a/task3/style/style.css
+++ b/task3/style/style.css
@@ -1,32 +1,58 @@
-ul {
-    display: flex;
-    flex-direction: column;
+.dropdownMenu {
+  display: flex;
+  padding: 1px;
+  flex-direction: column;
+  border: 1px solid rgb(107, 183, 255);
+  border-radius: 6px;
+  width: fit-content;
+  height: fit-content;
+  box-shadow: 0px 0px 2px 1px rgb(107, 183, 255);
 }
 
-.option { 
-    list-style: none;
-    border: 10px;
-    width: 300px;
-    height: 50px;
-    border-bottom: 1px solid rgb(230,230,230);
-    margin: 6px 0;
-
+.active {
+  border-bottom: 0;
 }
+
+.option {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  list-style: none;
+  width: 300px;
+  height: 50px;
+  border-bottom: 1px solid rgb(237,237,202);
+  background-color: rgb(255, 252, 250);
+}
+
 .option img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: rgb(240,240,240);
-}
-.option div {
-    position: relative;
-    display: inline;
-    bottom: 14px;
-    margin-left: 10px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-.dropdown li:not(.active) {
-    display: none;
-    animation: visibility 3s;
+  margin-top: 4px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-left: 10px;
+  background-color: rgb(240, 240, 240);
 }
 
+.option div {
+  margin-left: 10px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.option:hover {
+  cursor: pointer;
+  background: rgb(231, 250, 175);
+}
+.dropdownMenu:hover {
+  background-color: rgb(231, 250, 175);
+}
+.option:hover img {
+  background-color: white;
+}
+
+.removeMe {
+  position: relative;
+}
+.removeMe span{
+  position: absolute;
+  right: 12px;
+}
