add all razminka tasks

--- a/task4 PHP/razminka/styles/style.css
+++ b/task4 PHP/razminka/styles/style.css
@@ -53,7 +53,7 @@ span {
 .row_wrapper div {
   margin-right: 50px;
 }
-.text_to_links {
+.text_for_calc {
   outline: none;
   resize: horizontal;
   display: block;
